# epiphany

./: .gitignore  AGENTS.md
Desktop-backups/: BackupToFileEngine.bat  InstallBackup.bat  InstallJordan.bat  backup-Jordan.vbs
FileMaintenanceG/: .project  StoredCredential  build.gradle  settings.gradle
GoogleDriveRestore/: .project
PDSGoogleGroupConnector/: build.gradle  settings.gradle
canon/: canon.pl
compare-pds-email-addrs-to-mailman/: find-members-and-familes-with-more-than-one-email.pl  run-generate-4-lists.pl  run.pl
convert-gdrive-folder-to-team-drive/: README.md  convert.py  gdrive_migrate_to_shared_drive.py  gxcopy.py  requirements.txt
copy-mp3s-to-google-drive/: convert-gdrive-folder-to-team-drive.py  find-and-copy.py
dmarc/: process-dmarc-xml.py
extract-pds-churchoffice-data/: .gitignore  README.md  compile-pdsmodule.py  copy-from-samba.pl  email-queries.py  import-pdschurchoffice-to-mysql.pl  import-pdschurchoffice-to-sqlite3.pl  import-pdschurchoffice-to-sqlite3.py  pdsmodule.c  queries.txt  run-sqlite3  send-email-update-emails.py
internet-connectivity-checker/: internet-connectivity-checker.py
media/: README.md
meraki-api/: count-and-plot-clients-by-hour.pl  count-and-plot-guests-by-hour.pl  count-and-plot-guests-sundays.pl  count-and-plot-guests.pl  index.php
migrate-to-parishkit/: README.md
pds-pxtools/: Makefile.am  autogen.sh  configure.ac
pds-pxtools/mailman-list-audit/: Makefile.am  audit.pl  tech.txt
pds-pxtools/mem-fam-picturefiles/: main.c
pds-queries/: queries.txt  schemas.txt  some-queries.py
pds-sandbox/: refresh-sandbox.py
python/: ConstantContact.py  ECC.py  ECCEmailer.py  ECCUploader.py  Google.py  GoogleAuth.py  PDS.py  PDSChurch.py  ParishSoftv1.py  ParishSoftv2.py  requirements.txt
slack/: runner.py
(+534 files in other folders)
